--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,17 @@
 
 .builder-region { border: 1px dashed black; }
 
+.grabbed {
+  box-shadow: 0 5px 7px 0 rgba(0, 0, 0, 0.60);
+  transform: rotate(1deg);
+}
+
+.grabbed:focus { 
+  outline: none; 
+  border: 1px solid;
+  border-color: rgb(21, 137, 238);
+}
+
 /*  
  *  ============================================================================= 
  *  SINGLE PURPOSE CLASSES  
